# PUG

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SESION_COMPLETADA.md  app.py  config.py  docker-compose.yml  dump.rdb  hash_pass.py  main.py  matchmaking.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test_credentials.md  test_restructuracion.py
.devcontainer/: Dockerfile  devcontainer.json
core/: __init__.py  car_manager.py  data_processor.py  demo_generator.py  firebase_manager.py  models.py  obsidian_manager.py  portal_extractor.py  student_manager.py  student_scheduler.py  viaje_manager.py
docs/: ANALISIS_IMPLEMENTACION_REQUERIMIENTOS.md  ESTADO_FINAL_SESION.md  PORTAL_REAL_GUIDE.md  PREPARACION_FASE_2.md  README.md  REPORTE_FASE2_COMPLETO.md  RESTRUCTURACION_COMPLETADA.md  estado_fase_1.md
scripts/: analyze_logs.py  security_check.py  test_admin_login.py  test_car_system.py  test_chrome.py  test_demo_system.py  test_fase2.py  test_interface_fixes.py  test_label_text_debug.py  test_label_visibility.py  test_login_simple.py  test_portal.py  test_restructuración.py  test_simple.py
src/: app.py  app_new.py  app_old.py  constants.py  demo_data_generator.py  logger_config.py  main.py  matchmaking.py  portal_connector.py  tasks.py  test_sistema_rapido.py  validators.py
static/css/: validation.css
templates/: admin.html  admin_login.html  index.html  resultado.html  revisar.html
tests/: __init__.py  conftest.py  test_app.py
utils/: __init__.py  admin_tools.py  constants.py  log_cleaner.py  logger_config.py  validators.py
(+10 files in other folders)
